<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--enrolment-->
    <string name="enrolment_title">Ingrese su clave para el Enrolamiento.</string>
    <string name="enrolment_terms_conditions_acept">Acepto</string>
    <string name="enrolment_terms_conditions">Términos y Condiciones</string>
    <string name="enrolment_terms_conditions_message">Para continuar debe aceptar los Términos y Condiciones del servicio, haciendo clic en la casilla.</string>
    <string name="enrolment_send_enrolment_key_message">Enviaremos una clave de verificación por SMS para validar su teléfono</string>
    <string name="enrolment_celular_phone">Teléfono celular</string>
    <string name="enrolment_send_verification_key">Enviar clave de verificación</string>
    <string name="enrolment_enter_key">Ingrese su clave de verificación</string>
    <string name="enrolment_otp_message">Se ha enviado por SMS una clave de verificación, por favor, ingresela para concluir el enrolamiento.</string>
    <string name="enrolment_resend_otp">Reenviar Clave.</string>
    <string name="enrolment_phone_example">Ej 984532145.</string>
    <string name="enrolment_enter_password">Ingrese Contraseña.</string>
    <string name="enrolment_repeat_password">Repita Contraseña.</string>
    <string name="enrolment_pass_example">Ej 8547.</string>
    <string name="enrolment_save_password">Guardar Contraseña</string>
    <string name="enrolment_terms_conditions_content">Santander Inclusión Financiera, S.A. de C.V., SOFOM, E.R., Grupo Financiero Santander México (“Tuiio”), con domicilio en Avenida Prolongación Paseo de la Reforma número 500, colonia Lomas de Santa Fe, C.P. 01219, Ciudad de México, México; le informa que el tratamiento que se haga de sus Datos Personales será con la finalidad principal de verificar la identidad del Titular. Podrá conocer el Aviso de Privacidad integral de Tuiio en <string name="my_link"><a href="http://www.tuiio.com.mx/">www.tuiio.com.mx.</a></string></string>
    <!--login-->
    <string name="login_title">Digite su Clave para ingresar</string>
    <string name="login_forgot_password">Olvidé mi Clave</string>
    <!--Projects values-->
    <string name="action_accept">Aceptar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_no_thanks">No, gracias</string>
    <!--Sesion-->
    <string name="session_inactive_title">Sesión inactiva</string>
    <string name="session_inactive_message">Ha superado el tiempo de inactividad. Por favor introduzca nuevamente sus credenciales.</string>
    <!--settings-->
    <string name="settings_enter_oldpassword">Ingrese Contraseña Actual.</string>
    <string name="settings_enter_newpassword">Ingrese Nueva Contraseña.</string>
    <string name="settings_repeat_password">Repita Nueva Contraseña.</string>
    <string name="settings_update_password">Actualizar Contraseña.</string>
    <!--Number Picker-->
    <string name="pin_number_0">0</string>
    <string name="pin_number_1">1</string>
    <string name="pin_number_2">2</string>
    <string name="pin_number_3">3</string>
    <string name="pin_number_4">4</string>
    <string name="pin_number_5">5</string>
    <string name="pin_number_6">6</string>
    <string name="pin_number_7">7</string>
    <string name="pin_number_8">8</string>
    <string name="pin_number_9">9</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Notificaciones</string>
    <string name="title_notifications">Configuración</string>

    <string name="error_emulator">Se detecto que el dispositivo es un emulador</string>
    <string name="error_root">No es posible usar la app en dispositivos con modificaciones no autorizadas (Privilegios root o Jailbreak)</string>
    <string name="error_device_title">%s no puede ser usado</string>
    <string name="error_tampered_app">Versión invalida de la app</string>
    <string name="error_services">Los servidores no están disponibles. Por favor intente más tarde</string>
    <string name="error_service_connect">El servidor no está disponible. Cambiaremos la conexión a nuestro servidor secundario</string>
    <string name="session_need_online">Se ha detectado acceso a internet, por favor inicie sesión nuevamente</string>
    <string name="session_expired_title">Sesión expirada</string>
    <string name="session_expired_message">Su sesión ha expirado. Por favor introduzca nuevamente sus credenciales.</string>
    <string name="error_permitted_amount">El máximo monto permitido es %1$.2f</string>
    <string name="error_permitted_amount_2">El mínimo monto permitido es %1$.2f</string>
    <string name="error_blank_field">Campo obligatorio</string>
    <string name="success_validate">Validado</string>
    <string name="error_dispersion_is_zero">Saldo insuficiente para dispersar</string>
    <string name="error_account_lock">Su cuenta se encuentra bloqueada</string>
    <string name="question_account_lock">¿Está seguro que desea bloquear su cuenta?</string>
    <string name="lock_account_success">Su cuenta ha sido bloqueada satisfactoriamente.</string>
    <string name="lock_account_questions">Para desbloquear su cuenta, deberá contestar unas preguntas de verificación.</string>
</resources>
