<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.phoneValidation.PhoneValidationFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_margin="32dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enrolment_send_enrolment_key_message"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enrolment_celular_phone"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner_back"
        android:hint="@string/enrolment_phone_example"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:background="@color/colorPrimary"
        android:padding="@dimen/activity_horizontal_margin"
        android:textAllCaps="false"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/enrolment_send_verification_key"/>
</LinearLayout>