<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.createPassword.CreatePasswordFragment">

    <LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_enter_oldpassword"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner_back"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/enrolment_pass_example"
        android:inputType="numberPassword"
        android:maxLength="4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_enter_newpassword"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner_back"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/enrolment_pass_example"
        android:inputType="numberPassword"
        android:maxLength="4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_repeat_password"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>
    <EditText
        android:id="@+id/repetpass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner_back"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/enrolment_pass_example"
        android:inputType="numberPassword"
        android:maxLength="4"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:background="@color/colorPrimary"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textAllCaps="false"
        android:text="@string/enrolment_save_password"/>

</LinearLayout>